@@ -6,6 +6,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
         and unique. Thus shared pointers to those objects are no more used in
         public interfaces.
       - [API break] PinnedVersion: removed explicit constructor.
+      - [API break] Removed deprecated methods.
     - cache/relation:
       - [API break] ArchitecuturedRelation, ArchitecturedRelationExpression:
         constructor from string subrange is now explicit.
